-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.0 Beta4
-
None
-
Windows 10 / Qt 5.15.0 Beta 4 SingleThreaded / emsdk 1.39.8
Chrome Version 81.0.4044.122 (Offizieller Build) (64-Bit)
-
-
b2e998d4678b82f823d24f3c97d78dec034f4e71 (qt/qtbase/5.15) 3d452492c6c8e8e67f92f8ca573ac045843227b6 (qt/qtbase/dev)
The attached example performs a HTTP-Request to a webserver and an invalid port that always will fail. There is a timeout that calls abort after 3 seconds to stop the running request.
It does not work with Qt 5.15.0 Beta 4(emsdk 1.39.8) Single/Multithreaded.
It works if the app is built for Windows.
It worked with Qt 5.14.0 Beta 2(emsdk 1.39.0).
I also tested it with the new QNetworkRequest::setTransferTimeout instead of the timer,
this works in Windows but fails in the browser too.
I attached the project to reproduce and the built wasm apps.
| For Gerrit Dashboard: QTBUG-83728 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 298214,7 | wasm: fix network reply timeout and error handling | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
| 304910,3 | wasm: fix network reply timeout and error handling | dev | qt/qtbase | Status: MERGED | +2 | 0 |