wasm: fix network reply timeout and error handling

Fixes: QTBUG-83728
Change-Id: Ib8184a497a028949eea20e9d189d79da51ccc290
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit b2e998d4678b82f823d24f3c97d78dec034f4e71)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>